--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -10,13 +10,12 @@
   background-attachment: scroll;
   background-size: cover;
   h1 {
-    font-family: 'Varela Round';
+    font-family: 'Bebas Neue', cursive;
     font-size: 2.5rem;
     line-height: 2.5rem;
     letter-spacing: 0.8rem;
     background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 1));
     -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
   }
   h2 {
     max-width: 20rem;
